# centralita

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/detection/: analyze.rs  command_validation.rs  java.rs  mod.rs  node.rs  scan.rs
src-tauri/src/events/: mod.rs  runtime_events.rs
src-tauri/src/models/: common.rs  detection.rs  group_node.rs  health.rs  mod.rs  observability.rs  project_node.rs  run_history.rs  runtime.rs  workspace.rs  workspace_tree.rs
src-tauri/src/persistence/: database.rs  group_repository.rs  migrations.rs  mod.rs  project_repository.rs  run_history_repository.rs  test_utils.rs  workspace_repository.rs  workspace_tree_repository.rs
src-tauri/src/runtime/: error.rs  health_check.rs  health_manager.rs  history_recorder.rs  kill_tree.rs  log_buffer.rs  mod.rs  observability_summary.rs  process_manager.rs  process_state.rs
src-tauri/src/utils/: app_paths.rs  ids.rs  mod.rs  timestamps.rs
src-tauri/test-fixtures/analyzer/express-app/: package-lock.json  package.json
src-tauri/test-fixtures/analyzer/invalid-package-json/: package.json
src-tauri/test-fixtures/analyzer/next-app/: package.json
src-tauri/test-fixtures/analyzer/spring-gradle/: build.gradle  gradlew.bat
src-tauri/test-fixtures/analyzer/spring-maven/: mvnw.cmd  pom.xml
src-tauri/test-fixtures/scanner/java-app/: pom.xml
(+37 files in other folders)
